--- a/tbd/templates/tbd/build.html
+++ b/tbd/templates/tbd/build.html
@@ -31,7 +31,7 @@
                         </h4>
                     </div>
                 </div>
-                <table id="id_project_table" class="table" contenteditable="false">
+                <table id="id_build_table" class="table table-hover" contenteditable="false">
                     <caption class="text-center">Build List</caption>
                     <thead>
                         <tr>
