--- a/tbd/templates/tbd/build.html
+++ b/tbd/templates/tbd/build.html
@@ -40,6 +40,7 @@
                             <th>ShortName</th>
                             <th>UseServer</th>
                             <th>Create</th>
+                            <th>Operation</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -50,6 +51,10 @@
                             <td>{{ blt.short_name }}</td>
                             <td>{{ blt.use_server }}</td>
                             <td>{{ blt.create }}</td>
+                            <td>
+                                <a href="{% url 'tbd_build' %}?method=delete&project_name={{project.name|iriencode}}&version={{blt.version|iriencode}}"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>del?</a>
+                                <a href="{% url 'tbd_build' %}?project_name={{project.name|iriencode}}"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>TestData</a>
+                            </td>
                         </tr>
                         <tr class="hidden info">
                             <td colspan="2">Server Installer Path:</td>
