--- a/tbd/templates/tbd/testdata.html
+++ b/tbd/templates/tbd/testdata.html
@@ -8,6 +8,43 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-7">
+                        <p>
+                          <h1>
+                            {% if build %}
+                                {{ build.project.name }} <small>{{ build.version }}</small>
+                            {% else %}
+                                {% if project %}
+                                {{ project.name }} <small>No build selection</small>
+                                {% else %}
+                                No project selection <small>No build selection</small>
+                                {% endif %}
+                            {% endif %}
+                          </h1>
+                        </p>
+                    </div>
+                    <div class="col-md-5 row-bottom">
+                        <h4>Choose project:
+                            <select name="project_name">
+                                <option>--select project--</option>
+                                {% for prj in projects %}
+                                    <option value="{{prj.name}}"{% if project and prj == project %} selected="selected"{% endif %}>{{forloop.counter}}. {{prj.name}}</option>
+                                {% endfor %}
+                            </select>
+                        </h4>
+                        <h4>Choose build:
+                            <select name="build_version">
+                                <option>--select build--</option>
+                                {% if project %}
+                                {% for bld in builds %}
+                                    <option value="{{bld.project.name}}&version={{bld.version}}"{% if build and bld == build %} selected="selected"{% endif %}>{{forloop.counter}}. {{bld.version}}</option>
+                                {% endfor %}
+                                {% endif %}
+                            </select>
+                        </h4>
+                    </div>
+                </div>
                 <table id="id_build_table" class="table table-hover" contenteditable="false">
                     <caption class="text-center">Test Data</caption>
                     <thead>
@@ -25,11 +62,16 @@
                 </table>
                 <div>
                     <form action="{% url 'tbd_testdata' %}" method="post">
+                        {% for hidden in form.hidden_fields %}
+                        {{ hidden }}
+                        {% endfor %}
+                        {% csrf_token %}
                         <fieldset>
                             <legend contenteditable="false">Add Crash</legend>
                             <table>
-                                {% csrf_token %}
-                                {{ form }}
+                                {% for field in form.visible_fields %}
+                                <tr><td>{{ field.label_tag }}</td><td>{{ field }}</td></tr>
+                                {% endfor %}
                                 <tr>
                                     <td><button class="btn" type="reset" contenteditable="false">Reset</button></td>
                                     <td><button class="btn" name="add" type="submit" contenteditable="false">Submit</button></td>
