--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -6,6 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>{% block title %}No title{% endblock %}</title>
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/bootstrap-select.min.css" rel="stylesheet">
         {% block user_style %}{% endblock %}
         <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon" />
@@ -41,6 +42,7 @@
 
         <script src="/static/js/jquery-1.11.3.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
+        <script src="/static/js/bootstrap-select.min.js"></script>
         {% block user_js %}{% endblock %}
     </body>
 </html>
