--- a/tbd/templates/tbd/testdata.html
+++ b/tbd/templates/tbd/testdata.html
@@ -24,7 +24,7 @@
                           </h1>
                         </p>
                     </div>
-                    <div class="col-md-5 row-bottom">
+                    <div class="col-md-5">
                         <h4>Choose project:
                             <select name="td_project_name" class="selectpicker">
                                 <option>--select project--</option>
