add UI to adjust Host and TestCase in Crash template

--- a/tbd/templates/tbd/testdata.html
+++ b/tbd/templates/tbd/testdata.html
@@ -69,7 +69,7 @@
                         <fieldset>
                             <legend contenteditable="false">Add Crash</legend>
                             <table>
-                                <tr>
+                                <tr class="crash_head">
                                     <td><label>Host:</label></td>
                                     <td>
                                         <select name="td_host" class="selectpicker">
@@ -78,14 +78,16 @@
                                             <option value="{{host.name}}">{{forloop.counter}}. {{host.name}}({{host.ip}})</option>
                                         {% endfor %}
                                         </select>
-                                        <button class="btn" contenteditable="false">Add</button>
+                                        <button type="button" class="btn btn-default adjust_btn" >Extend</button>
+                                        <button type="button" class="btn btn-info hidden add_btn" action="{% url 'ajax_add_host' %}">Add</button>
+                                        <button type="button" class="btn btn-danger hidden del_btn">Delete</button>
                                     </td>
                                 </tr>
                                 <tr class="hidden info">
-                                    <td>Add Host:</td>
-                                    <td>Name=<input type="text" />IP=<input type="text" />MAC=<input type="text" /></td>
+                                    <td>Adjust Host:</td>
+                                    <td><input type="text" name="host_name" placeholder="Host Name"/><input type="text" name="host_ip" placeholder="IP address"/><input type="text" name="host_mac" placeholder="MAC address"/></td>
                                 </tr>
-                                <tr>
+                                <tr class="crash_head">
                                     <td><label>TestCase:</label></td>
                                     <td>
                                         <select name="td_testcase" class="selectpicker">
@@ -94,15 +96,21 @@
                                             <option value="{{tc.name}}">{{forloop.counter}}. {{tc.name}}({{tc.platform}})</option>
                                         {% endfor %}
                                         </select>
-                                        <button class="btn" contenteditable="false">Add</button>
+                                        <button type="button" class="btn btn-default adjust_btn" >Extend</button>
+                                        <button type="button" class="btn btn-info hidden add_btn" action="{% url 'ajax_add_tc' %}">Add</button>
+                                        <button type="button" class="btn btn-danger hidden del_btn">Delete</button>
                                     </td>
                                 </tr>
                                 <tr class="hidden info">
-                                    <td>Add TestCase:</td>
-                                    <td>Name=<input type="text" />Platform=<input type="text" /></td>
+                                    <td>Adjust TestCase:</td>
+                                    <td><input type="text" name="tc_name" placeholder="TestCase Name"/>
+                                        <select name="tc_platform" class="selectpicker">
+                                            <option>--select platform--</option>
+                                        </select>
+                                    </td>
                                 </tr>
                                 {% for field in form.visible_fields %}
-                                <tr><td>{{ field.label_tag }}</td><td>{{ field }}</td></tr>
+                                <tr class="crash_head"><td>{{ field.label_tag }}</td><td>{{ field }}</td></tr>
                                 {% endfor %}
                                 <tr>
                                     <td><button class="btn" type="reset" contenteditable="false">Reset</button></td>
