--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -13,22 +13,6 @@
     </head>
     
     <body>
-        <div class="modal fade" id="alert_msgbox" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" data-backdrop="static">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="alert_msgbox_title">Modal title</h4>
-              </div>
-              <div class="modal-body" id="alert_msgbox_body">
-                <p>One fine body</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              </div>
-            </div><!-- /.modal-content -->
-          </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -58,6 +42,7 @@
         <script src="/static/js/jquery-1.11.3.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
         <script src="/static/js/bootstrap-select.min.js"></script>
+        <script src="/static/js/jquery.bootstrap.min.js"></script>
         {% block user_js %}{% endblock %}
     </body>
 </html>
