--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -7,6 +7,7 @@
         <title>{% block title %}No title{% endblock %}</title>
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/css/bootstrap-select.min.css" rel="stylesheet">
+        <link href="/static/tbd/css/user_style.css" rel="stylesheet">
         {% block user_style %}{% endblock %}
         <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon" />
@@ -43,6 +44,7 @@
         <script src="/static/js/bootstrap.min.js"></script>
         <script src="/static/js/bootstrap-select.min.js"></script>
         <script src="/static/js/jquery.bootstrap.min.js"></script>
+        <script src="/static/tbd/js/user_js.js"></script>
         {% block user_js %}{% endblock %}
     </body>
 </html>
