--- a/tbd/templates/tbd/testdata.html
+++ b/tbd/templates/tbd/testdata.html
@@ -1,6 +1,12 @@
 ﻿{% extends 'tbd/base.html' %}
 {% block title %}TestData - SBD{% endblock %}
 {% block nav_testdata_attr %}class="active"{% endblock %}
+{% block user_js %}
+<script type="text/javascript">
+    var hosts = {{ hosts|safe }};
+    var testcases = {{ testcases|safe }};
+</script>
+{% endblock %}
 
 {% block content %}
     <div class="container">
@@ -72,9 +78,6 @@
                                     <td>
                                         <select name="td_host" class="selectpicker">
                                             <option>--select host--</option>
-                                        {% for host in hosts %}
-                                            <option data-host_name="{{host.name}}" data-host_ip="{{host.ip}}" data-host_mac="{{host.mac}}">{{forloop.counter}}. {{host.name}}({{host.ip}})</option>
-                                        {% endfor %}
                                         </select>
                                         <button type="button" class="btn btn-default add_btn" action="{% url 'ajax_add_host' %}">Extend</button>
                                         <button type="button" class="btn btn-danger del_btn" action="{% url 'ajax_del_host' %}">Delete</button>
@@ -93,9 +96,6 @@
                                     <td>
                                         <select name="td_testcase" class="selectpicker">
                                             <option>--select testcase--</option>
-                                        {% for tc in testcases %}
-                                            <option value="{{tc.name}}">{{forloop.counter}}. {{tc.name}}({{tc.platform}})</option>
-                                        {% endfor %}
                                         </select>
                                         <button type="button" class="btn btn-default add_btn" action="{% url 'ajax_add_tc' %}">Extend</button>
                                         <button type="button" class="btn btn-danger del_btn" action="{% url 'ajax_del_tc' %}">Delete</button>
