--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -27,7 +27,7 @@
                             <td>{{ prj.build_set.all | length }}</td>
                             <td>{{ prj.create }}</td>
                             <td>
-                                <a href="{% url 'tbd_project' %}?method=delete&project_name={{prj.name|iriencode}}"><span class="glyphicon glyphicon-remove" aria-hidden="true">del?</span></a>
+                                <a href="#" data-url="{% url 'tbd_project' %}" data-method="delete" data-project_name="{{prj.name}}"><span class="glyphicon glyphicon-remove" aria-hidden="true">del?</span></a>
                                 <a href="{% url 'tbd_build' %}?project_name={{prj.name|iriencode}}"><span class="glyphicon glyphicon-share-alt" aria-hidden="true">build</span></a>
                             </td>
                         </tr>
